# ollama-manager

./: .gitignore  Cargo.toml  Dockerfile
config/: config.example.yaml
src/: config.rs  endpoint.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  middleware.rs  model_manager.rs  strategy.rs
src/lb/: least_conn.rs  mod.rs  random.rs  round_robin.rs
