[package]
name = "ollama-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-rustls = "0.24"
config = "0.13"
rand = "0.8"
dashmap = "5.4"
backoff = { version = "0.4", features = ["tokio"] }
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1.0"
